# weather

./: com.obyknovenius.Weather.json  meson.build
data/: com.obyknovenius.Weather.appdata.xml.in  com.obyknovenius.Weather.desktop.in  com.obyknovenius.Weather.gschema.xml  meson.build
po/: POTFILES
src/: application.css  main.c  meson.build  weather-day.c  weather-day.h  weather-day.ui  weather-hour.c  weather-hour.h  weather-hour.ui  weather-window.c  weather-window.h  weather-window.ui  weather.gresource.xml
